<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Core!</string>
    <string name="app_name">PocketCampus EPFL</string>
    
    <string name="mainscreen_configure">Configure</string>
    <string name="TestTextViewBlabla">TestTextView</string>
    
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    
    <!-- Social names -->
    <string name="social_login_username_text">Username</string>
    <string name="social_login_username_field"></string>
    <string name="social_login_password_text">Password</string>
    <string name="social_login_password_field"></string>
    <string name="social_login_button">Login</string>
    
	<string name="friendsListButtonAdd">Search</string>
	<string name="friendsListButtonPerm">Permissions</string>
	<string name="friendsListButtonDel">Delete</string>
	<string name="social_permission_radio_granted">Grant</string>
	<string name="social_permission_radio_denied">Deny</string>
	<string name="social_permission_ok">OK</string>
	<string name="social_permission_cancel">Cancel</string>
	<string name="social_permission_choose_service">Choose a service</string>
	<string name="friendsRequestListField"></string>
	<string name="social_create_username_text">Username</string>
	<string name="social_create_username_field"></string>
	<string name="social_create_password_text">Password</string>
	<string name="social_create_password_field"></string>
	<string name="social_delete_confirm">Are you sure?</string>
	<string name="social_delete_confirm_yes">Yes</string>
	<string name="social_delete_confirm_no">No</string>
	<string name="social_friends_list_separator">Friends</string>
	<string name="social_create_title">Create a new account:</string>
	<string name="social_create_button">Create an account</string>
	<string name="friendsRequestsListButtonValid">Go</string>
	<string name="social_friends_search_requesting_friends_separator">Requesting friends</string>
	<string name="social_friends_search_request_sent">New request sent to</string>
	<string name="social_friends_search_request_not_sent">Request not sent to</string>
	<string name="social_friends_search_request_accepted">friendships confirmed !</string>
	<string name="social_account_new_created">New account created</string>
	<string name="social_account_existing_already">This nickname is not available</string>
	<string name="social_ok">OK</string>
	<string name="social_login">Connection problem, please log in</string>
	<string name="social_unable_to_login">Connection problem, unable to log in</string>
	<string name="social_no_internet">You are not connected to the Internet</string>
	<string name="social_edit_permissions">Edit permissions</string>
	<string name="social_permissions_gps_localization">GPS Localization</string>
	<string name="social_permissions_updated">Permissions updated !</string>
	
	<string name="social_login_title">Please log in with a previously created account.</string>
	<string name="social_login_createAccount">If you do not have an account yet, please create one in the main menu of the preferences.</string>
	
	
	<string name="directory_friendly_name">Directory</string>
	<string name="directory_search">Search</string>
</resources>
