<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:background="@drawable/social_background"
	android:layout_height="fill_parent">
	
	<org.pocketcampus.core.ui.ActionBar
		android:id="@+id/actionbar" style="@style/ActionBar" />	

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/actionbar"
		android:padding="20dip"
		android:orientation="vertical"
		android:layout_gravity="center_horizontal">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<ImageView
				android:src="@drawable/app_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"></ImageView>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/TableRow01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingRight="10dip"
			android:paddingLeft="10dip">
			<EditText
				android:hint="@string/social_login_username_text"
				android:text="@string/social_login_username_field"
				android:paddingLeft="10dip"
				android:id="@+id/socialLoginUsernameField"
				android:singleLine="true"
				android:maxLines="1"
				android:ems="10"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"></EditText>
		</LinearLayout>
	
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingRight="10dip"
			android:paddingLeft="10dip">
			<EditText
				android:hint="@string/social_login_password_text"
				android:text="@string/social_login_password_field"
				android:id="@+id/socialLoginPasswordField"
				android:paddingLeft="10dip"
				android:layout_width="fill_parent"
				android:singleLine="true"
				android:maxLines="1"
				android:ems="10"
				android:password="true"
				android:layout_height="wrap_content"></EditText>
		</TableRow>
	
		<Button
			android:text="@string/social_login_button"
			android:id="@+id/socialLoginButton"
			android:layout_gravity="right"
			android:layout_width="140dip"
			android:layout_height="wrap_content"
			android:paddingRight="10dip"></Button>
	</LinearLayout>
</RelativeLayout>